# Compiler_BUAA

./: CMakeLists.txt  Compiler.cpp  Compiler.h  Error.cpp  GenerateMIPS.cpp  Lexer.cpp  Main.cpp  Operand.h  Quaternary.h  README.md  Symbol.h  Syntax.cpp  Utils.cpp  VarAddress.h  definition.h  midCodes.txt  mips.txt  testfile.txt  编译技术课程设计设计文档.md
